Routed attention banner to Databases modal, fixed Settings focus ring clipping, and layered inline alert overlay above sticky save strip

--- a/src/EventLogExpert.UI/Modal/ModalChrome.razor.css
+++ b/src/EventLogExpert.UI/Modal/ModalChrome.razor.css
@@ -61,6 +61,7 @@ dialog:not(:modal) {
 .inline-alert-overlay {
     position: absolute;
     inset: 0;
+    z-index: 2;
 
     background-color: var(--overlay-dim);
 }
@@ -70,6 +71,7 @@ dialog:not(:modal) {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 3;
 
     display: flex;
     flex-direction: column;
